--- a/fetch_planets.html
+++ b/fetch_planets.html
@@ -6,14 +6,22 @@
          window.addEventListener("load", function(){
             // TODO: fetch planets JSON
             let json = [];
-            fetch("https://handlers.education.launchcode.org/static/planets.json").then(function(resoponse){
-                response.json().then(function(json){
-                    console.log(json);
-                });
-            });
-            const destination = document.getElementById("destination");
-            destination.innerHTML = `<h3>Planet ${json[0].name}</h3>`
-         });
+            fetch("https://handlers.education.launchcode.org/static/planets.json").then(function(response){
+   response.json().then(function(json) {
+    let index = 0;
+      const destination = document.getElementById("destination");
+      destination.addEventListener("click", function(){
+         destination.innerHTML = `
+            <div>
+               <h3>Planet ${json[index].name}</h3>
+               <img src=${json[index].image} height=250></img>
+            </div>
+         `;
+         index = (index + 1) % json.length;
+      });
+   });
+});
+        });
       </script>
    </head>
    <body>
